Replaced the use of List.of() to allow Java 8 compilation